Completed latest-grid -> ISSUE with alignments of elements

--- a/style.css
+++ b/style.css
@@ -216,9 +216,11 @@ p{
 .undercontent{
     display: flex;
     justify-content: center;
+
     width: 100%;
 
-    height: 2000px;
+    overflow: visible;
+    min-height: 1200px;
 
     position: relative;
     z-index: 1;
@@ -240,6 +242,7 @@ p{
     position: absolute;
     left: 0;
     top: 0;
+    height: 100%;
 
     padding-right: 10px;
 }
@@ -267,7 +270,7 @@ p{
 
 .right-content {
     width: calc(100% * 1 / 3);
-    height: 2000px;
+    height: auto;
 
     position: absolute;
     right: 0;
@@ -535,4 +538,115 @@ p{
     cursor: pointer;
     color: white;
     background-color:#F7941EFF ;
+}
+
+.the-latest{
+    width:100%;
+
+    display: flex;
+    justify-content: center;
+
+    position: relative;
+}
+.intestazione-latest{
+    width:60%;
+    min-width: 1020px;
+
+    display: flex;
+    justify-content: center;
+
+    position: relative;
+}
+.intestazione-latest h3{
+    font-size: 23px;
+    color: #F7941EFF;
+    letter-spacing: 2px;
+
+    margin:0;
+}
+.intestazione-latest h3:before{
+    content:"";
+    border: 1px solid #9a9a9a;
+    position: absolute;
+    width: 40%;
+    top: 14px;
+    left:0;
+}
+.intestazione-latest h3:after{
+    content: "";
+    border: 1px solid #9a9a9a;
+    position: absolute;
+    width: 40%;
+    top: 14px;
+    right:0;
+}
+.grid-latest{
+    width: 60%;
+    min-width: 1020px;
+
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+
+    position: absolute;
+    top:30px;
+
+    height:700px;
+
+
+
+}
+.latest-1{
+    grid-column-start: 1;
+
+    text-align: left;
+}
+.latest-2{
+    grid-column-start: 2;
+
+    text-align: center;
+}
+.latest-3{
+    grid-column-start: 3;
+
+    text-align: center;
+}
+.latest-4{
+    grid-column-start: 4;
+
+    text-align: right;
+
+}
+.latest-5{
+    grid-column-start: 1;
+    grid-row-start:2;
+
+    text-align: left;
+}
+.latest-6{
+    grid-column-start: 2;
+    grid-row-start:2;
+
+    text-align: center;
+}
+.latest-7{
+    grid-column-start: 3;
+    grid-row-start:2;
+
+    text-align: center;
+}
+.latest-8{
+    grid-column-start: 4;
+    grid-row-start:2;
+
+    text-align: right;
+}
+.paragrafo-latest{
+    font-size: 1.15rem;
+    line-height: 1.15rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+}
+.grid-latest p{
+
 }
